tests/invalid/ListAccess_Invalid_4.whiley

function f([int] x) -> void:
    int y = x[0]
    int z = x[1]
    assert y == z
